Eventdetails: comments, location

--- a/client/index.html
+++ b/client/index.html
@@ -10,5 +10,8 @@
 <body>
   <div id="app"></div>
   <script src="/bundle.js"></script>
+  <script type="text/javascript"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCXrSPS3Vm7PuAbSjIHo2RFIUKSzWdbqT4&libraries=geometry,places,visualization">
+</script>
 </body>
 </html>
